[metadata]
author = cspeterson,bepstein
author_email = network@ias.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Automatically cleans up phones in the limbo state of "Generic Smartphone" in Duo Security.

long_description = file: README.md
long_description_content_type = text/markdown
name = duo_phone_cleanup
project_urls =
    Documentation = https://github.com/theias/ias_duo_phone_cleanup
    Bug Tracker = https://github.com/theias/ias_duo_phone_cleanup/issues
    Source = https://github.com/theias/ias_duo_phone_cleanup
url = https://github.com/theias/ias_duo_phone_cleanup
version = attr: duo_phone_cleanup.__version__

[options]
install_requires =
	duo_client>=5.1.0,<6.0.0
packages = find:
package_dir =
	=./
python_requires = >=3.9
scripts =
	bin/duo_phone_cleanup

[options.packages.find]
where = ./
exclude = tests*
